UserInEvents CRUD all working, url fix
